added Dockerrun.aws.josn for Amazson Elastic Container Service and deployment section to .travis.yml

--- a/complex/docker-compose.yml
+++ b/complex/docker-compose.yml
@@ -49,6 +49,9 @@ services:
         volumes:
             - /app/node_modules
             - ./worker:/app
+        environment:
+            - REDIS_HOST=redis
+            - REDIS_PORT=6379
     nginx:
         build:
             dockerfile: Dockerfile.dev
