--- a/complex/.travis.yml
+++ b/complex/.travis.yml
@@ -24,3 +24,25 @@ after_success:
     - docker push soramon0/complex_nginx
     - docker push soramon0/complex_server
     - docker push soramon0/complex_worker
+
+# Add access,secret keys in travis-ci as env vars
+# AWS_ACCESS_KEY, AWS_SECRET_KEY
+deploy:
+    # Travis can use this to preconfigure the deployment
+    provider: elasticbeanstalk
+    # Region depends on where the elasticbeanstalk instance was created
+    region: "us-west-2"
+    # What we created in elasticbeanstalk
+    app: "complex"
+    # Setup the environment name
+    env: "Complex-env"
+    # The S3 bucket
+    bucket_name: "elasticbeanstalk-us-west-2-some-id"
+    # Same as app name by default
+    bucket_path: "complex"
+    # Only deploy when we push code to the master branch
+    on:
+        branch: master
+    access_key_id: $AWS_ACCESS_KEY
+    secret_access_key:
+        secure: $AWS_SECRET_KEY # may have to wrap it in quotes
