--- a/complex/client/nginx/default.conf
+++ b/complex/client/nginx/default.conf
@@ -1,6 +1,6 @@
 server {
     listen 3000;
-    root /usr/share/nginx/html
+    root /usr/share/nginx/html;
     index index.html index.htm;
 
     location / {}
