--- a/k8s_complex/k8s/ingress-service.yml
+++ b/k8s_complex/k8s/ingress-service.yml
@@ -5,9 +5,28 @@ metadata:
   annotations:
     kubernetes.io/ingress.class: nginx
     nginx.ingress.kubernetes.io/rewrite-target: /
+    certmanager.k8s.io/cluster-issuer: 'letsencrypt-prod'
+    nginx.ingress.kubernetes.io/ssl-redirect: 'true'
 spec:
+  tls:
+    - hosts:
+        - domain-name.com
+        - www.domain.name.com
+      secretName: k8s-domain.com
   rules:
-    - http:
+    - host: domain-name.com
+      http:
+        paths:
+          - path: /
+            backend:
+              serviceName: client-cluster-ip-service
+              servicePort: 3000 
+          - path: /api/
+            backend:
+              serviceName: server-cluster-ip-service
+              servicePort: 5000
+    - host: www.domain-name.com
+      http:
         paths:
           - path: /
             backend:
